--- a/03_template/application-form.html
+++ b/03_template/application-form.html
@@ -15,7 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="lgsp_Harold-Hua">
 
-    <title>About Us</title>
+    <title>For Investor</title>
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
@@ -54,9 +54,9 @@
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
                     <li class="tab-from-item"><a href="./index.html">Home</a></li>
-                    <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
+                    <li class="tab-from-item active"><a href="./for-investor.html">For Investors</a></li>
                     <li class="tab-from-item"><a href="./resolutions.html">Resolutions</a></li>
-                    <li class="tab-from-item active"><a href="./services.html">Services</a></li>
+                    <li class="tab-from-item"><a href="./services.html">Services</a></li>
                     <li class="tab-from-item"><a href="./products.html">Products</a></li>
                     <li class="tab-from-item"><a href="./conferences.html">Conferences</a></li>
                     <li class="tab-from-item"><a href="./about-us.html">About Us</a></li>
@@ -75,6 +75,7 @@
                         <li><a href="#Marketing">Marketing</a></li>
                         <li><a href="#Events">Events</a></li>
                         <li><a href="#News">News</a></li>
+                        <li><a href="#ApplicationForm">Ratings & Ranks</a></li>
                         <li><a href="#ApplicationForm">Application Form</a></li>
                     </ul>
                 </div>
@@ -89,9 +90,11 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#">Product quotation</a></li>
-                        <li><a href="#">Technology Support</a></li>
-                        <li><a href="#">APP Download</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
@@ -124,121 +127,70 @@
             </div>
         </div>
     </section>
-    <section class="section-banner section--gray">
-        <div class="container sqr sqr--banner">
-            <div class="sqr-inner">
-                <div id="TopBanner" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="image-center">
-                                <a href="#"><img src="assets/main/images/banner-home.png" alt="First slide"></a>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="image-center">
-                                <a href="#"><img src="assets/main/images/banner-home.png" alt="Second slide"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+    <section class="section--dark">
+        <div class="container">
+            <div class="information">
+                <p> Speak with an Univeral Smart Technology Representative Today</p>
             </div>
         </div>
     </section>
     <section class="section--gray section--big">
         <div class="container">
-            <h2 class="section-title">Our Story</h2>
-            <div class="information">
-                <p>Focus Universal Inc., a publicly traded company (OTCQB: FCUV), is a universal smart device developer
-                    and manufacturer, headquartered in Los Angeles, California.
-                </p>
-                <p>The Focus Universal technology features a Universal Smart Instrumentation Platform (USIP), which
-                    provides a unique and universal solution for embedded design, industrial control and monitoring. It
-                    achieves this using a mobile device or computer as a display to communicate with a group of
-                    sensors/probes. These sensor modules can be produced by any manufacturer and integrated seamlessly
-                    with our USIP into our Smart App.
-                </p>
-                <p>This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to featured content or information.
-                </p>
-                <p>Our goal is to reduce the need for expensive, limited technology instruments and replace it with an
-                    inexpensive, singular device that can communicate seamlessly with more advanced monitoring and
-                    control.
-                </p>
-
-            </div>
-            <h3 class="section-sub-title">Our Team</h3>
+            <h2 class="section-title center">Application Form</h2>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/desheng-wang.png" alt="desheng wang">
-                            </div>
-                        </div>
-                        <div class="person-title">Dr. Desheng Wang</div>
-                        <div class="person-position">Founder & CEO</div>
-                        <div class="person-detail">
-                            Dr. Desheng Wang has been the CEO, Secretary and Director of Focus Universal Inc. since
-                            December
-                            29, 2014.
-                            Dr. Wang has over 20 years of professional experience in mobile technology. He served as a
-                            senior
-                            research
-                            fellow at California Institute of Technology from 1994-2011. Over the last five years, he
-                            has
-                            served as
-                            president of Vitashower Corporation and as President of Perfecular Inc. In 1988, he earned
-                            his
-                            masters
-                            degree from Dalian Institute of Chemical Physics at the Chinese Academy of Science in 1988.
-                            Dr.
-                            Wang earned
-                            his Ph.D. in Chemistry at Emory University in 1994.
-                        </div>
+                <div class="col-md-5">
+                    <div class="information">
+                        <p>Thank-You for your interest in Universal Smart Technology Investor Relations. </p>
+
+                        <p>We look forward to speaking with you, listening to your needs and commencing the IR program
+                            that is most appropriate for you. </p>
+
+                        <p>Please fill out the following form to receive a guaranteed response within the next 2
+                            business hours.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr sqr--100 rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/edward-lee.png" alt="edward lee">
-                            </div>
+                <div class="col-md-7">
+                    <form class="form-box">
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">First Name</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input first name">
                         </div>
-                        <div class="person-title">Dr. Edward Lee</div>
-                        <div class="person-position">President & Director</div>
-                        <div class="person-detail"> Dr. Edward Lee is on the Board of Directors at Focus Universal,
-                            Inc. He received his undergraduate degree
-                            from Lanzhou University, a graduate degree from the University of Science & Technology of
-                            China and a
-                            doctorate degree from the University of Florida.</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr sqr--100 rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/jennifer-gu.png" alt="jennifer gu">
-                            </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Last Name</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input last name">
                         </div>
-                        <div class="person-title">Dr. Jennifer Gu</div>
-                        <div class="person-position">Director</div>
-                        <div class="person-detail"> Dr. Jennifer Gu is on the Board of Directors at Focus Universal,
-                            Inc. She received his undergraduate degree
-                            from the University of Florida and a doctorate degree from the University of California,
-                            Los Angeles.</div>
-                    </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Company</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input company's name">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Symbol & Exch</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input Symbol & Exch">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Phone Number</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input phone number">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">How did you hear about us?</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option>News paper</option>
+                                <option>Friends</option>
+                                <option>Online</option>
+                                <option>Other Company</option>
+                                <option>Marketing</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Other</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </form>
                 </div>
             </div>
         </div>
