--- a/03_template/conferences.html
+++ b/03_template/conferences.html
@@ -106,13 +106,7 @@
                     </ul>
                 </div>
                 <div class="tab-to-item">
-                    <ul class="inline">
-                        <li><a href="#">cGORACOM QUICK TIPS</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                    </ul>
+                    Conferences Center
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
