--- a/03_template/for-investor.html
+++ b/03_template/for-investor.html
@@ -75,7 +75,8 @@
                         <li><a href="#Marketing">Marketing</a></li>
                         <li><a href="#Events">Events</a></li>
                         <li><a href="#News">News</a></li>
-                        <li><a href="#ApplicationForm">Application Form</a></li>
+                        <li><a href="#ApplicationForm">Ratings & Ranks</a></li>
+                        <li><a href="./application-form.html">Application Form</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
