--- a/03_template/products.html
+++ b/03_template/products.html
@@ -98,11 +98,9 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#">bGORACOM QUICK TIPS</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">Vita Shower</a></li>
+                        <li><a href="#">Smart Meter</a></li>
+                        <li><a href="#">USIP</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
