--- a/03_template/resolutions.html
+++ b/03_template/resolutions.html
@@ -80,11 +80,12 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#">cGORACOM QUICK TIPS</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
-                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">Fram</a></li>
+                        <li><a href="#">Chemical</a></li>
+                        <li><a href="#">Energy</a></li>
+                        <li><a href="#">Environment</a></li>
+                        <li><a href="#">Pharmaceutical</a></li>
+                        <li><a href="#">Water Recource</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
@@ -160,89 +161,29 @@
     </section>
     <section class="section--gray section--big">
         <div class="container">
-            <h2 class="section-title">Our Story</h2>
+            <h2 class="section-title">Resolutions</h2>
             <div class="information">
-                <p>Focus Universal Inc., a publicly traded company (OTCQB: FCUV), is a universal smart device developer
-                    and manufacturer, headquartered in Los Angeles, California.
-                </p>
-                <p>The Focus Universal technology features a Universal Smart Instrumentation Platform (USIP), which
-                    provides a unique and universal solution for embedded design, industrial control and monitoring. It
-                    achieves this using a mobile device or computer as a display to communicate with a group of
-                    sensors/probes. These sensor modules can be produced by any manufacturer and integrated seamlessly
-                    with our USIP into our Smart App.
-                </p>
-                <p>This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to featured content or information.
-                </p>
-                <p>Our goal is to reduce the need for expensive, limited technology instruments and replace it with an
-                    inexpensive, singular device that can communicate seamlessly with more advanced monitoring and
-                    control.
-                </p>
+                <div class="section-sub-title">How It Works</div>
 
+                <p>The USIP is realized on mobile devices by applying the interactive graphical representation of
+                    control and indicator elements common in real instruments such as display, computation, information
+                    storage, knobs, buttons, dials, and graphs etc. A touch screen interface which supports real-time
+                    data monitoring facilitates instrument control and operation.</p>
+
+                <p>The USIP is a versatile network. One instrument could do many different measurements and controls
+                    and substitutes for many other instruments.</p>
+
+                <p>The Ubiquitor acts as a wireless bridge between the smartphone and data acquisition module. The
+                    Sensor module, which consists of sensors and data acquisition measurement hardware, measures
+                    electrical or physical phenomenon such as voltage, current, temperature, pressure, or sound. The
+                    USC combines the monitoring functionality of the Ubiquitor with the ability control any device with
+                    the USIP Smart App.</p>
+
+                <p>The self-adaptive universal smart application software automatically identifies and configures the
+                    attractive graphical user interface for the end users.</p>
             </div>
-            <h3 class="section-sub-title">Our Team</h3>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/desheng-wang.png" alt="desheng wang">
-                            </div>
-                        </div>
-                        <div class="person-title">Dr. Desheng Wang</div>
-                        <div class="person-position">Founder & CEO</div>
-                        <div class="person-detail">
-                            Dr. Desheng Wang has been the CEO, Secretary and Director of Focus Universal Inc. since
-                            December
-                            29, 2014.
-                            Dr. Wang has over 20 years of professional experience in mobile technology. He served as a
-                            senior
-                            research
-                            fellow at California Institute of Technology from 1994-2011. Over the last five years, he
-                            has
-                            served as
-                            president of Vitashower Corporation and as President of Perfecular Inc. In 1988, he earned
-                            his
-                            masters
-                            degree from Dalian Institute of Chemical Physics at the Chinese Academy of Science in 1988.
-                            Dr.
-                            Wang earned
-                            his Ph.D. in Chemistry at Emory University in 1994.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr sqr--100 rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/edward-lee.png" alt="edward lee">
-                            </div>
-                        </div>
-                        <div class="person-title">Dr. Edward Lee</div>
-                        <div class="person-position">President & Director</div>
-                        <div class="person-detail"> Dr. Edward Lee is on the Board of Directors at Focus Universal,
-                            Inc. He received his undergraduate degree
-                            from Lanzhou University, a graduate degree from the University of Science & Technology of
-                            China and a
-                            doctorate degree from the University of Florida.</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="person">
-                        <div class="person-media sqr sqr--100 rounded-circle">
-                            <div class="sqr-inner">
-                                <img src="./assets/main/images/person/jennifer-gu.png" alt="jennifer gu">
-                            </div>
-                        </div>
-                        <div class="person-title">Dr. Jennifer Gu</div>
-                        <div class="person-position">Director</div>
-                        <div class="person-detail"> Dr. Jennifer Gu is on the Board of Directors at Focus Universal,
-                            Inc. She received his undergraduate degree
-                            from the University of Florida and a doctorate degree from the University of California,
-                            Los Angeles.</div>
-                    </div>
-                </div>
-            </div>
+            
+            
         </div>
     </section>
     <footer>
