--- a/03_template/for-investor.html
+++ b/03_template/for-investor.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="login">
                     <ul class="inline web-only">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a href="form-login.html">Sign In</a></li>
+                        <li><a href="form-register.html">Register</a></li>
                     </ul>
                     <div class="nav-bar mobile-only switch-from" target="#MobileNav">
                         <i class="icon-align-justify"></i>
@@ -76,7 +76,7 @@
                         <li><a href="#Events">Events</a></li>
                         <li><a href="#News">News</a></li>
                         <li><a href="#ApplicationForm">Ratings & Ranks</a></li>
-                        <li><a href="./application-form.html">Application Form</a></li>
+                        <li><a href="./form-application.html">Application Form</a></li>
                     </ul>
                 </div>
                 <div class="tab-to-item">
