--- a/03_template/form-application.html
+++ b/03_template/form-application.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="login">
                     <ul class="inline web-only">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a href="form-login.html">Sign In</a></li>
+                        <li><a href="form-register.html">Register</a></li>
                     </ul>
                     <div class="nav-bar mobile-only switch-from" target="#MobileNav">
                         <i class="icon-align-justify"></i>
@@ -138,17 +138,6 @@
         <div class="container">
             <h2 class="section-title center">Application Form</h2>
             <div class="row">
-                <div class="col-md-5">
-                    <div class="information">
-                        <p>Thank-You for your interest in Universal Smart Technology Investor Relations. </p>
-
-                        <p>We look forward to speaking with you, listening to your needs and commencing the IR program
-                            that is most appropriate for you. </p>
-
-                        <p>Please fill out the following form to receive a guaranteed response within the next 2
-                            business hours.</p>
-                    </div>
-                </div>
                 <div class="col-md-7">
                     <form class="form-box">
                         <div class="form-group">
@@ -192,6 +181,18 @@
                         <button type="submit" class="btn btn-primary">Sign in</button>
                     </form>
                 </div>
+                <div class="col-md-5">
+                    <div class="information">
+                        <p>Thank-You for your interest in Universal Smart Technology Investor Relations. </p>
+
+                        <p>We look forward to speaking with you, listening to your needs and commencing the IR program
+                            that is most appropriate for you. </p>
+
+                        <p>Please fill out the following form to receive a guaranteed response within the next 2
+                            business hours.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
