--- a/03_template/conferences.html
+++ b/03_template/conferences.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="login">
                     <ul class="inline web-only">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a href="form-login.html">Sign In</a></li>
+                        <li><a href="form-register.html">Register</a></li>
                     </ul>
                     <div class="nav-bar mobile-only switch-from" target="#MobileNav">
                         <i class="icon-align-justify"></i>
