--- a/03_template/form-login.html
+++ b/03_template/form-login.html
@@ -15,7 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="lgsp_Harold-Hua">
 
-    <title>Contact Us</title>
+    <title>For Investor</title>
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
@@ -53,13 +53,13 @@
             </div>
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
-                    <li class="tab-from-item"><a href="./index.html">Home</a></li>
+                    <li class="tab-from-item active"><a href="./index.html">Home</a></li>
                     <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
                     <li class="tab-from-item"><a href="./resolutions.html">Resolutions</a></li>
                     <li class="tab-from-item"><a href="./services.html">Services</a></li>
                     <li class="tab-from-item"><a href="./products.html">Products</a></li>
                     <li class="tab-from-item"><a href="./conferences.html">Conferences</a></li>
-                    <li class="tab-from-item active"><a href="./about-us.html">About Us</a></li>
+                    <li class="tab-from-item"><a href="./about-us.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -75,6 +75,7 @@
                         <li><a href="#Marketing">Marketing</a></li>
                         <li><a href="#Events">Events</a></li>
                         <li><a href="#News">News</a></li>
+                        <li><a href="#ApplicationForm">Ratings & Ranks</a></li>
                         <li><a href="#ApplicationForm">Application Form</a></li>
                     </ul>
                 </div>
@@ -116,68 +117,49 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#OurStory">Our Story</a></li>
-                        <li><a href="#OurTeam">Our Team</a></li>
+                        <li><a href="#">dGORACOM QUICK TIPS</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section--gray section--big">
-        <a name="OurStory"></a>
+    <section class="section--dark">
         <div class="container">
-            <h2 class="section-title">Contact Us</h2>
             <div class="information">
-                <p>Get in touch and we’ll get back to you as soon as we can. We look forward to hearing from you!</p>
-                <p>20511 East Walnut Drive North, Walnut, CA 91789</p>
-                <p>info@focusuniversal.com</p>
+                <p> Speak with an Univeral Smart Technology Representative Today</p>
             </div>
         </div>
     </section>
     <section class="section--gray section--big">
         <div class="container">
-            <h2 class="section-title">Direction</h2>
-            <div id="map"></div>
-            <script>
-                // The following example creates a marker in Stockholm, Sweden using a DROP
-                // animation. Clicking on the marker will toggle the animation between a BOUNCE
-                // animation and no animation.
+            <h2 class="section-title center">Log in to Universal Smart Technology</h2>
+            <div class="row">
+                <div class="col-md-7">
+                    <form class="form-box">
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Username</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input username">
+                        </div>
 
-                var marker;
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Password</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sign In</button>
+                    </form>
+                </div>
+                <div class="col-md-5">
+                    <div class="information">
+                        <p>Welcome to Universal Smart Technology</p>
 
-                function initMap() {
-                    var digitalSystemLocation = {
-                        lat: 34.058110,
-                        lng: -118.235374
-                    };
+                    </div>
+                </div>
 
-                    var map = new google.maps.Map(document.getElementById('map'), {
-                        zoom: 12,
-                        center: digitalSystemLocation
-                    });
-                    var image = '../images/location.png';
-
-                    marker = new google.maps.Marker({
-                        map: map,
-                        draggable: true,
-                        // label: "DigitalSystem Corporation",
-                        animation: google.maps.Animation.DROP,
-                        position: digitalSystemLocation,
-                        icon: image
-                    });
-                    marker.addListener('click', toggleBounce);
-                }
-
-                function toggleBounce() {
-                    if (marker.getAnimation() !== null) {
-                        marker.setAnimation(null);
-                    } else {
-                        marker.setAnimation(google.maps.Animation.BOUNCE);
-                    }
-                }
-            </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx3jDNGIz6utNNceuOwwqCtcu7pb2j2pA&callback=initMap"
-                async defer></script>
+            </div>
         </div>
     </section>
     <footer>
