--- a/03_template/form-register.html
+++ b/03_template/form-register.html
@@ -15,7 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="lgsp_Harold-Hua">
 
-    <title>Contact Us</title>
+    <title>For Investor</title>
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
@@ -53,13 +53,13 @@
             </div>
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
-                    <li class="tab-from-item"><a href="./index.html">Home</a></li>
+                    <li class="tab-from-item active"><a href="./index.html">Home</a></li>
                     <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
                     <li class="tab-from-item"><a href="./resolutions.html">Resolutions</a></li>
                     <li class="tab-from-item"><a href="./services.html">Services</a></li>
                     <li class="tab-from-item"><a href="./products.html">Products</a></li>
                     <li class="tab-from-item"><a href="./conferences.html">Conferences</a></li>
-                    <li class="tab-from-item active"><a href="./about-us.html">About Us</a></li>
+                    <li class="tab-from-item"><a href="./about-us.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -75,6 +75,7 @@
                         <li><a href="#Marketing">Marketing</a></li>
                         <li><a href="#Events">Events</a></li>
                         <li><a href="#News">News</a></li>
+                        <li><a href="#ApplicationForm">Ratings & Ranks</a></li>
                         <li><a href="#ApplicationForm">Application Form</a></li>
                     </ul>
                 </div>
@@ -116,68 +117,93 @@
                 </div>
                 <div class="tab-to-item">
                     <ul class="inline">
-                        <li><a href="#OurStory">Our Story</a></li>
-                        <li><a href="#OurTeam">Our Team</a></li>
+                        <li><a href="#">dGORACOM QUICK TIPS</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
+                        <li><a href="#">For Investors</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section--gray section--big">
-        <a name="OurStory"></a>
+    <section class="section--dark">
         <div class="container">
-            <h2 class="section-title">Contact Us</h2>
             <div class="information">
-                <p>Get in touch and we’ll get back to you as soon as we can. We look forward to hearing from you!</p>
-                <p>20511 East Walnut Drive North, Walnut, CA 91789</p>
-                <p>info@focusuniversal.com</p>
+                <p> Speak with an Univeral Smart Technology Representative Today</p>
             </div>
         </div>
     </section>
     <section class="section--gray section--big">
         <div class="container">
-            <h2 class="section-title">Direction</h2>
-            <div id="map"></div>
-            <script>
-                // The following example creates a marker in Stockholm, Sweden using a DROP
-                // animation. Clicking on the marker will toggle the animation between a BOUNCE
-                // animation and no animation.
+            <h2 class="section-title center">Register</h2>
+            <div class="row">
+                <div class="col-md-7">
+                    <form class="form-box">
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Username</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input username">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">E-mail</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input E-mail">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Password</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input password">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Confirm Password</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please input password again">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Create Account</button>
+                    </form>
+                </div>
+                <div class="col-md-5">
+                    <div class="information">
+                        <p>Participation in AGORACOM’s General Forums is a privilege and not a right. Though we have
+                            used a lighter side in getting our point across, contravention of any of the following will
+                            lead to automatic termination of forum privileges: </p>
 
-                var marker;
+                        <p>To ensure your continued participation on AGORACOM, follow these 6 simple rules.</p>
 
-                function initMap() {
-                    var digitalSystemLocation = {
-                        lat: 34.058110,
-                        lng: -118.235374
-                    };
+                        <!-- <p>1. PROFANITY - Swearing or use of foul language is strictly prohibited… in any language (We
+                            have 42 interpreters on staff to keep an eye on those International members). For the
+                            record, ***** or any combination thereof is considered profanity.</p>
 
-                    var map = new google.maps.Map(document.getElementById('map'), {
-                        zoom: 12,
-                        center: digitalSystemLocation
-                    });
-                    var image = '../images/location.png';
+                        <p>2. DEROGATORY COMMENTS TOWARDS OTHERS - Calling another member an idiot, clown, stupid,
+                            dumb, moron or ##x%x# for brains is strictly prohibited.</p>
 
-                    marker = new google.maps.Marker({
-                        map: map,
-                        draggable: true,
-                        // label: "DigitalSystem Corporation",
-                        animation: google.maps.Animation.DROP,
-                        position: digitalSystemLocation,
-                        icon: image
-                    });
-                    marker.addListener('click', toggleBounce);
-                }
+                        <p>3. OFF-TOPIC OR IRRELEVANT COMMENTS - Yep, nobody can believe what Donald Trump said today,
+                            or that Monica Lewinsky is more believable than Hillary, or the Dallas Cowboys keep
+                            crushing their fans (seriously though, it ***** hurts). However, the main forums are not
+                            the place to discuss TV shows, politics or sports. … O.K. maybe a little sports. Please use
+                            the Off-Topic Forums</p>
 
-                function toggleBounce() {
-                    if (marker.getAnimation() !== null) {
-                        marker.setAnimation(null);
-                    } else {
-                        marker.setAnimation(google.maps.Animation.BOUNCE);
-                    }
-                }
-            </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx3jDNGIz6utNNceuOwwqCtcu7pb2j2pA&callback=initMap"
-                async defer></script>
+                        <p>4. SPAMMING OR CLAIMS OF INSIDER INFORMATION - Enough said… unless your brother in-law
+                            really is Jeff Bezo’s chauffeur.</p>
+
+                        <p>5. BASHING OR HYPING – Unsubstantiated claims of grandeur or impending doom are best left to
+                            Nostradamus as they will cost you some valuable points towards your rating. Also included
+                            in this category is repetition of the same question, fact or opinion over and over after a
+                            response has been provided or if there is currently no ascertainable answer.</p>
+
+                        <p>6. CAPS LOCK AND USE OF !!!!!!! - NOTHING AND WE MEAN NOTHING IS MORE AGGRAVATING AND
+                            ANNOYING THAN READING A POST THAT LOOKS LIKE THIS!!!!!! IF YOU HAVE SOMETHING TO SAY, IT
+                            DOESN’T BECOME ANYMORE NOTICEABLE WHEN YOU TYPE IT IN CAPS!!!!! IN FACT, MOST PEOPLE TEND
+                            TO IGNORE THESE KINDS OF POSTS!!!!... Exceptions will be made for those deserted on a
+                            deserted island (with a kick ass internet connection) and sending out a distress signal, or
+                            anyone who invested in WorldCom, Enron, Tyco, Nortel, Webvan, Pets.com or Sideware and
+                            needs to freak out every year.We trust the gist of our point has been made. Be good to your
+                            fellow members, respect their opinions and understand there will be different levels of
+                            expertise posting on these boards. Otherwise, kiss our privacy statement goodbye as we hand
+                            out your address and phone number to everyone you piss off… oops!</p>
+
+                        Sincerely, AGORACOM -->
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
     <footer>
