--- a/03_template/admin/admin-index.html
+++ b/03_template/admin/admin-index.html
@@ -51,10 +51,9 @@
                     Welcome Admin!
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Edit My Profile</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Log Out</a>
                   </div>
                 </li>
               </ul>
